test/classes/casts/GenericDowncast.2.good
GenericDowncast.chpl:6: In function 'main':
GenericDowncast.chpl:15: error: illegal downcast to generic superclass type 'shared D'
